--- a/app/views/home/_loggedin.html.erb
+++ b/app/views/home/_loggedin.html.erb
@@ -124,24 +124,27 @@
 			<div class="findppl">
 				<div class="boxyleft">
 
+		<% educators = current_teacher.recommends[0..15].shuffle[0..2].map{ |f| Teacher.find(f.to_s) } %>
 	
 		<div class="listitem" style="margin-left:15px">
 			
-			<a href="/kleinerin">
-				<img src="http://img.cla.co/30196e0ca58be4c89f26fcbf608262fb/thumb_md.png" class="thumbster" />
+			<a href="/<%= educators[0].username %>">
+				<img src="<%= teacher_thumb_md(educators[0]) %>" class="thumbster" />
 			</a>
 			
 			<div class="infowrap">
 				<div class="bigtitle">
-					<a href="/kleinerin">Marissa Simonson</a>
+					<a href="/<%= educators[0].username %>"><%= "#{educators[0].fname} #{educators[0].lname}" %></a>
 				</div>
 
+				<% if !educators[0].info.nil? && !educators[0].info.subjects.nil? && !educators[0].info.subjects.empty? %>
 				<div class="medata">
 					<span>
 						<img alt="Subject" src="http://static2.claco.com/assets/profile/subject-b45001b14b3cf8d458bc12a55b86bec0.png">
-						5th Science
+						<%= educators[0].info.subjects.first %>
 					</span>
 				</div>
+				<% end %>
 			</div>
 
 			<div style="clear:both"></div>
@@ -149,21 +152,23 @@
 
 		<div class="listitem mid">
 			
-			<a href="/kleinerin">
-				<img src="http://img.cla.co/30196e0ca58be4c89f26fcbf608262fb/thumb_md.png" class="thumbster" />
+			<a href="/<%= educators[1].username %>">
+				<img src="<%= teacher_thumb_md(educators[1]) %>" class="thumbster" />
 			</a>
 			
 			<div class="infowrap">
 				<div class="bigtitle">
-					<a href="/kleinerin">Marissa Simonson</a>
+					<a href="/<%= educators[1].username %>"><%= "#{educators[1].fname} #{educators[1].lname}" %></a>
 				</div>
 
+				<% if !educators[1].info.nil? && !educators[1].info.subjects.nil? && !educators[1].info.subjects.empty? %>
 				<div class="medata">
 					<span>
 						<img alt="Subject" src="http://static2.claco.com/assets/profile/subject-b45001b14b3cf8d458bc12a55b86bec0.png">
-						5th Science
+						<%= educators[1].info.subjects.first %>
 					</span>
 				</div>
+				<% end %>
 			</div>
 
 			<div style="clear:both"></div>
@@ -171,21 +176,23 @@
 
 		<div class="listitem" style="border-right:none">
 			
-			<a href="/kleinerin">
-				<img src="http://img.cla.co/30196e0ca58be4c89f26fcbf608262fb/thumb_md.png" class="thumbster" />
+			<a href="/<%= educators[2].username %>">
+				<img src="<%= teacher_thumb_md(educators[2]) %>" class="thumbster" />
 			</a>
 			
 			<div class="infowrap">
 				<div class="bigtitle">
-					<a href="/kleinerin">Marissa Simonson</a>
+					<a href="/<%= educators[2].username %>"><%= "#{educators[2].fname} #{educators[2].lname}" %></a>
 				</div>
 
+				<% if !educators[2].info.nil? && !educators[2].info.subjects.nil? && !educators[2].info.subjects.empty? %>
 				<div class="medata">
 					<span>
 						<img alt="Subject" src="http://static2.claco.com/assets/profile/subject-b45001b14b3cf8d458bc12a55b86bec0.png">
-						5th Science
+						<%= educators[2].info.subjects.first %>
 					</span>
 				</div>
+				<% end %>
 			</div>
 
 			<div style="clear:both"></div>
