Ship to dragon rider

--- a/app/views/home/educators.html.erb
+++ b/app/views/home/educators.html.erb
@@ -4,7 +4,7 @@
 
 <div class="whitebox">
 	<div class="headnounce">
-		Educators you may know
+		Educators recommended for you
 	</div>
 
 	<% if false %>
