Fixed zocial buttons
Signed-off-by: Diwank Singh <diwank@iheartco.de>

--- a/app/views/home/_loggedin.html.erb
+++ b/app/views/home/_loggedin.html.erb
@@ -216,7 +216,7 @@
 
 <ul class="pager">
 			<li class="next">
-				<a href="/educators" style="font-weight:bolder;font-size:18px;margin-right:15px;margin-top:10px">View all&rarr;</a>
+				<a href="/educators" style="font-weight:bolder;margin-right:15px;margin-top:10px">View all&rarr;</a>
 			</li>
 		</ul>
 				<% if current_teacher.omnihash["facebook"].nil? || current_teacher.omnihash["twitter"].nil? %>
