--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -33,6 +33,10 @@
 			<td class="labeler">Password</td>
 			<td><%= f.password_field :password %></td>
 		</tr>
+		<!-- <tr>
+				<td class="labeler"><span class="label label-info">Personal Info</span></td>
+				<td><hr></td>
+		</tr> -->
 		<tr>
 			<td class="labeler">Email</td>
 			<td><%= f.email_field :email %></td>
@@ -42,8 +46,8 @@
 			<td>
 				<div class="controls controls-row">
 	  				<%= f.select(:title, options_for_select( [["",""],["Mr.","Mr."],["Mrs.","Mrs."],["Ms.","Ms."],["Dr.","Dr."]] ), {}, {:style => "width:auto"}) %>
-	  				<%= f.text_field :fname, {:class => "span1o5"} %>
-	  				<%= f.text_field :lname, {:class => "span1o5"} %>
+	  				<%= f.text_field :fname, {:class => "span1o5", :placeholder => "First Name"} %>
+	  				<%= f.text_field :lname, {:class => "span1o5", :placeholder => "Last Name"} %>
 				</div>
 			</td>
 		</tr>
@@ -63,9 +67,9 @@
 		<% end %>
 	</table>
 
-	<div style="color:#666;font-size:11px;margin-left:145px">You agree to our <a href="/legal/tos" target="_blank">terms of service</a> and <a href="/legal/privacy" target="_blank">privacy policy</a>.</div>
+	<div style="color:#666;font-size:11px;margin-left:95px">You agree to our <a href="/legal/tos" target="_blank">terms of service</a> and <a href="/legal/privacy" target="_blank">privacy policy</a>.</div>
 
-	<button type="submit" class="btn btn-primary btn-large" style="font-weight:bolder; margin-top:10px; margin-left:117px; width:220px">
+	<button type="submit" class="btn btn-primary btn-large" style="font-weight:bolder; margin-top:10px; margin-left:115px; width:215px">
 		Sign up!
 	</button>
 
