fixed caching of feed

--- a/app/views/layouts/feedpieces/_feedsub.html.erb
+++ b/app/views/layouts/feedpieces/_feedsub.html.erb
@@ -7,7 +7,7 @@
 	# end
 	%>
 
-	<% #expire_fragment(@f[:log].id.to_s) if Rails.cache.read(@f[:log].id.to_s) 
+	<% expire_fragment(@f[:log].id.to_s) if Rails.cache.read(@f[:log].id.to_s) 
 	%>
 
 	<% cache("#{@f[:log].id}", :expires_in => 15.minutes) do %>
@@ -70,6 +70,9 @@
 		# 	expire_fragment(g[:log].id.to_s) 
 		# 	Rails.cache.delete(g[:log].id.to_s)
 		# end
+		%>
+
+		<% expire_fragment(g[:log].id.to_s) if Rails.cache.read(g[:log].id.to_s) 
 		%>
 
 		<% cache("#{g[:log].id}", :expires_in => 15.minutes) do %>
