--- a/app/views/teachers/show.html.erb
+++ b/app/views/teachers/show.html.erb
@@ -10,6 +10,7 @@
 
 <div class="container">
   <div class="profile-avatar-wrap">
+    <% debugger %>
     <img src="<%= teacher_thumb_lg(@teacher) %>">
     <% #<span class="clips">
       #<strong>4,204</strong> snaps
