--- a/app/views/layouts/feedpieces/_feedcontent.html.erb
+++ b/app/views/layouts/feedpieces/_feedcontent.html.erb
@@ -7,6 +7,9 @@
 	# end
 	%>
 
+	<% expire_fragment(@f[:log].id.to_s) if Rails.cache.read(@f[:log].id.to_s) 
+	%>
+
 	<% cache("#{@f[:log].id}", :expires_in => 15.minutes) do %>
 
 	<a href="<%= named_binder_route(@f[:model]) %>" class="conlink">
@@ -72,6 +75,9 @@
 	# 	Rails.cache.delete(g[:log].id.to_s)
 	# end
 	#debugger
+	%>
+
+	<% expire_fragment(g[:log].id.to_s) if Rails.cache.read(g[:log].id.to_s) 
 	%>
 
 	<% cache("#{g[:log].id}", :expires_in => 15.minutes) do %>
