Email autocomplete fix
Signed-off-by: Diwank Singh <diwank@iheartco.de>

--- a/app/assets/javascripts/application.js.erb
+++ b/app/assets/javascripts/application.js.erb
@@ -32,10 +32,10 @@ $(document).ready(function() {
 		fieldAdder();
 	});
 
-	$('.new_teacher #teacher_email').each(
-		function /*change email*/ () {
-			$(this).attr('value', getQueryHash().email || '');
-		});
+	// $('.new_teacher #teacher_email').each(
+	// 	function change email () {
+	// 		$(this).attr('value', getQueryHash().email || '');
+	// 	});
 
 });
 
