--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -39,7 +39,7 @@
 		</tr> -->
 		<tr>
 			<td class="labeler">Email</td>
-			<td><%= f.email_field :email %></td>
+			<td><%= f.email_field :email, :value => "#{params[:email]}" %></td>
 		</tr>
 		<tr>
 			<td class="labeler">Name</td>
