revised invite email

--- a/app/views/user_mailer/system_invite.html.erb
+++ b/app/views/user_mailer/system_invite.html.erb
@@ -5,14 +5,18 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-Hi there!<br />
-Eric from Claco (formerly class connect) here :D We've been working around the clock to get our new site online and it's finally ready!<br />
+Hi there!<br /><br />
+We received a request for a beta invite for this email. <br/>
+We've been working around the clock to get our new site online<br/>
+And we're excited to inform you that it's finally ready!<br />
 <br />
-Here is your secret link to create an account on our exclusive beta:<br />
+Here is your exclusive link to create an account on Claco:<br />
 <%= link_to @link, @link %><br />
 <br />
-Let me know if you have any questions! Once you have the chance to poke around, I'd love to hear your feedback :)<br />
+Feel free to write back if you have any questions!<br />
 <br />
--Eric
+-Eric<br />
+Team Claco<br />
+(formerly Classconnect)
 </body>
 </html>
