--- a/app/views/home/educators.html.erb
+++ b/app/views/home/educators.html.erb
@@ -33,6 +33,8 @@
 
 	<% current_teacher.recommends.each do |f| %>
 
+	<% cache("#{f.to_s}educobj", :expires_in => 10.minutes) do %>
+
 	<% @rec = Teacher.find(f.to_s) %>
 
 	<div class="listitem">
@@ -65,6 +67,8 @@
 
 		<div style="clear:both"></div>
 	</div>
+
+	<% end %>
 
 	<% end %>
 
