Subcribe button for educator recommendations
Signed-off-by: Diwank Singh <diwank@iheartco.de>

--- a/app/assets/stylesheets/home/educators.css.erb
+++ b/app/assets/stylesheets/home/educators.css.erb
@@ -11,7 +11,7 @@
   box-shadow: 0 1px 3px rgba(34,25,25,0.3);
 
   background: #fff;
-  width:600px;
+  width:650px;
   margin:20px auto 0 auto;
 }
 
@@ -73,4 +73,61 @@
   margin-right:3px;
   opacity: 0.50;
   filter: alpha(opacity=50);
+}
+
+.mainbox .listitem{
+  padding:13px 0 13px 10px;
+  border-bottom:1px solid #EAEAEA;
+}
+
+.mainbox .listitem .thumbster{
+  float:left;
+  -webkit-border-radius: 4px;
+     -moz-border-radius: 4px;
+          border-radius: 4px;
+}
+
+.mainbox .listitem .infowrap {
+  float:left;
+  margin-left:14px;
+  width:430px;
+}
+
+.mainbox .listitem .bigtitle{
+  font-size:16px;
+  font-weight:bolder;
+}
+
+.mainbox .listitem .bigtitle .uname{
+  color:#888 !important;
+  font-size:13px !important;
+  font-weight:normal !important;
+  text-decoration: none !important;
+}
+
+.mainbox .listitem .biotxt{
+  font-size:13px;
+  color:#666;
+  font-style: italic;
+}
+
+.mainbox .listitem .medata {
+  margin-top:6px;
+}
+
+.mainbox .listitem .medata span{
+  color:#777;
+  font-size:12px;
+}
+
+.mainbox .listitem .medata span img{
+  margin-top:-4px;
+  margin-right:3px;
+  opacity: 0.50;
+  filter: alpha(opacity=50);
+}
+
+.mainbox .listitem .actarea {
+  float:right;
+  margin-right:10px;
 }
