--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -134,9 +134,9 @@ footer {
   float:left;
   margin:-5px 10px -10px 0;
 
-  -moz-box-shadow:0 0px 4px rgba(34,25,25,0.4);
+  /*-moz-box-shadow:0 0px 4px rgba(34,25,25,0.4);
   -webkit-box-shadow:0 0px 4px rgba(34,25,25,0.4);
-  box-shadow: 0 0px 4px rgba(34,25,25,0.4);
+  box-shadow: 0 0px 4px rgba(34,25,25,0.4);*/
 }
 
 #namester a:hover {
