--- a/app/views/home/educators.html.erb
+++ b/app/views/home/educators.html.erb
@@ -1,7 +1,9 @@
 <% content_for :headcon do %>
 	<%= stylesheet_link_tag    "home/educators", :media => "all" %>
 <% end %>
-
+<% content_for :botcon do %>
+	<%= javascript_include_tag "search/main" %>
+<% end %>
 <div class="whitebox">
 	<div class="headnounce">
 		Educators recommended for you
@@ -39,6 +41,10 @@
 		<a href="/<%= @rec.username %>">
 			<img src="<%= teacher_thumb_md(@rec) %>" class="thumbster">
 		</a>
+		<!-- <a id="subbtn" class="btn btn-small pull-right btn-primary actbtn">
+            <img alt="Whitescribe" src="http://static2.claco.com/assets/profile/whitescribe-0a51f39d0d72b8462f56aa1ba0fdc120.png" style="float:left;height:8px;margin:3px 5px 0 0">
+            <span class="upme">Subscribe</span>
+          </a> -->
 		<div class="infowrap">
 			<div class="bigtitle">
 				<a href="/<%= @rec.username %>"><%= "#{@rec.fname} #{@rec.lname}" %></a> <a href="/<%= @rec.username %>"><span class="uname">(<%= @rec.username %>)</span></a>
@@ -62,7 +68,18 @@
 				<% end %>
 			</div>
 		</div>
-
+		<div class="actarea">
+			<% if current_teacher.id.to_s!=@rec.id.to_s %>
+				<% if !current_teacher.subscribed_to?(@rec.id) %>
+				<a class="btn btn-medium subbtn pull-right" style="font-weight:bolder">
+					<%= image_tag("profile/darkscribe.png", :style => "float:left;height:12px;margin:3px 5px 0 0") %>
+					Subscribe
+				</a>
+				<% else %>
+				<div style="margin-right:5px;font-weight:bolder;color:#555">✓ Subscribed!</div>
+				<% end %>
+			<% end %>
+		</div>
 		<div style="clear:both"></div>
 	</div>
 
