profile and main page cleanup

--- a/app/views/home/_loggedin.html.erb
+++ b/app/views/home/_loggedin.html.erb
@@ -118,7 +118,7 @@
 
 
 		<div class="announcer">
-			Educators you may know
+			Educators recommended for you
 		</div>
 
 			<div class="findppl">
