--- a/app/views/teachers/show.html.erb
+++ b/app/views/teachers/show.html.erb
@@ -124,13 +124,21 @@
         Subscriptions 
       </h3>
       <ul class="profile-avatars">
-        <% @subscriptions.shuffle.sort_by{|t| Teacher.thumbready?(t) ? 1 : 0}[0..5].shuffle.each do |sub| %>
-          <li>
-            <a href="/<%= sub.username %>">
-              <img src="<%= teacher_thumb_md(sub) %>">
-            </a>
-          </li>
-        <% end %>
+        <% 
+        i=0
+        @subscriptions.shuffle.each do |sub|
+          if Teacher.thumbready?(sub)
+            i += 1 %>
+              <li>
+                <a href="/<%= sub.username %>">
+                  <img src="<%= teacher_thumb_md(sub) %>">
+                </a>
+              </li>
+            <%
+          end
+          break if i==6
+        end
+        %>
       </ul>
     </div>
     <div class="pull-right profile-module">
@@ -139,13 +147,20 @@
         Subscribers 
       </h3>
       <ul class="profile-avatars">
-        <% @subscribers.shuffle.sort_by{|t| Teacher.thumbready?(t) ? 1 : 0}[0..5].shuffle.each do |sub| %>
-          <li>
-            <a href="/<%= sub.username %>">
-              <img src="<%= teacher_thumb_md(sub) %>">
-            </a>
-          </li>
-        <% end %>
+        <% 
+        i=0
+        @subscribers.shuffle.each do |sub|
+          if Teacher.thumbready?(sub)
+            i += 1 %>
+              <li>
+                <a href="/<%= sub.username %>">
+                  <img src="<%= teacher_thumb_md(sub) %>">
+                </a>
+              </li>
+            <%
+          end
+          break if i==6
+        end %>
       </ul>
     </div>
   </div>
