--- a/app/views/layouts/_embed.html.erb
+++ b/app/views/layouts/_embed.html.erb
@@ -16,7 +16,7 @@
 
 		<center><iframe width="700" height="390" src="http://www.educreations.com/lesson/embed/<%= @binder.current_version.get_educreations_id %>" class="embeddrop" frameborder="0" allowfullscreen></iframe></center>
 
-	<% elsif @binder.current_version.vidtype = "vimeo" %>
+	<% elsif @binder.current_version.vidtype == "vimeo" %>
 
 		<center><iframe src="http://player.vimeo.com/video/<%= @binder.current_version.get_vimeo_id %>" width="700" height="390" class="embeddrop" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></center>
 
