--- a/app/views/admin/apps.html.erb
+++ b/app/views/admin/apps.html.erb
@@ -20,8 +20,13 @@ i=1
 <td><%= app.lname %></td>
 <td><%= app.email %></td>
 <td><%= app.body %></td>
-<td><%= app.timestamp %></td>
-<td><%= app.status %></td>
+<td><%= time_ago_in_words(Time.at(app.timestamp).to_datetime) %> ago</td>
+<td><% if app.status == 0 %>
+		<%= link_to("Approve", approve_path(app)) %> |
+		<%= link_to("Deny", deny_path(app)) %>
+	<% else %>
+		<%= app.status == 1 ? "Approved" : "Denied" %>
+	<% end %></td>
 </tr>
 <% end %>
 </table>
