--- a/app/views/teachers/show.html.erb
+++ b/app/views/teachers/show.html.erb
@@ -122,12 +122,13 @@
       <h3>
         <strong><%= @subscriptions.count %></strong>
         Subscriptions 
+        <button class="btn btn-mini pull-right" data-action="modal" data-url="<%= @teacher.username %>/subscriptions" type="button">View all</button>
       </h3>
       <ul class="profile-avatars">
         <% @subscriptions.shuffle.sort_by{|t| Teacher.thumbready?(t) ? 1 : 0}[0..5].shuffle.each do |sub| %>
           <li>
             <a href="/<%= sub.username %>">
-              <img src="<%= teacher_thumb_md(sub) %>">
+              <img src="<%= teacher_thumb_md(sub) %>" class="thumbster">
             </a>
           </li>
         <% end %>
@@ -137,12 +138,13 @@
       <h3>
         <strong><%= @subscribers.count %></strong>
         Subscribers 
+        <button class="btn btn-mini pull-right" data-action="modal" data-url="<%= @teacher.username %>/subscribers" type="button">View all</button>
       </h3>
       <ul class="profile-avatars">
         <% @subscribers.shuffle.sort_by{|t| Teacher.thumbready?(t) ? 1 : 0}[0..5].shuffle.each do |sub| %>
           <li>
             <a href="/<%= sub.username %>">
-              <img src="<%= teacher_thumb_md(sub) %>">
+              <img src="<%= teacher_thumb_md(sub) %>" class="thumbster">
             </a>
           </li>
         <% end %>
