--- a/app/assets/stylesheets/teacher.css
+++ b/app/assets/stylesheets/teacher.css
@@ -213,13 +213,57 @@ ul.nav-tabs.onProfile li.active a {
   font-weight:bolder;
 }
 
+.thumbster{
+  -webkit-border-radius: 4px;
+     -moz-border-radius: 4px;
+          border-radius: 4px;
+}
 
 
+#facebox li>img {
+  display: inline;
+}
 
+#facebox h3 {
+  font-size: 13px;
+  font-weight: bolder;
+  margin-left: 14px;
+  line-height: 15px;
+  display: inline;
+}
 
+#facebox p {
+  display: inline;
+}
 
+#facebox li button,
+#facebox li span {
+  margin: 12px 5px 0 0;
+  font-weight: bolder;
+}
 
+#facebox li span {
+  font-size: 11px;
+  color: #555;
+  display: block;
+}
 
+#facebox hr {
+  margin-top: 12px;
+}
+
+#facebox ul {
+  margin: 0;
+  overflow-y: scroll;
+  height: 400px;
+  width: auto;
+}
+
+#facebox li {
+  display: block;
+  list-style: none;
+  padding-top: 10px;
+}
 
 .feedwrap {
   padding:20px;
@@ -234,13 +278,6 @@ ul.nav-tabs.onProfile li.active a {
   box-shadow: 0 1px 3px rgba(34,25,25,0.3);
 
   background: #fff;
-}
-
-
-
-
-.content-list {
-  
 }
 
 .content-list .content-item {
