--- a/app/views/teachers/editinfo.html.erb
+++ b/app/views/teachers/editinfo.html.erb
@@ -45,6 +45,7 @@ $('#myTab a').click(function (e) {
 			</div>
 
 			<div class="imgbox">
+				<iframe src="/editavatar"></iframe>
 				<img src="<%= teacher_thumb_lg(current_teacher) %>" class="imger" />
 			</div>
 
