More subscriber count button fixes
Signed-off-by: Diwank Singh <diwank@iheartco.de>

--- a/app/assets/javascripts/profile/main.js.erb
+++ b/app/assets/javascripts/profile/main.js.erb
@@ -137,7 +137,7 @@ $('#subbtn').click(function() {
 
   });
 
-  $('button[data-action=modal]').click(
+  $('*[data-action=modal]').click(
       function(){
         jQuery.facebox({ajax: $(this).attr('data-url')});
       });
