--- a/app/views/home/_loggedin.html.erb
+++ b/app/views/home/_loggedin.html.erb
@@ -299,7 +299,7 @@
   <div id="inviteForm" style="display: none;">
   <div class="headtitle">
     Invite colleagues
-    <a href="#" onClick="closefBox()" class="btn btn-mini pull-right">X</a>
+    <a href="#" onClick="closefBox()" class="btn btn-mini pull-right">&times;</a>
   </div>
 
   <div class="errorBox"></div>
@@ -308,7 +308,7 @@
     <div style="overflow: hidden;">
       <blockquote>
         <p>Invite people, get free storage.</p>
-        <small>You both get 300MB extra storage for free.</small>
+        <small>You both get 200MB extra storage for free.</small>
       </blockquote>
     </div>
     <div id="urlInviter">
