--- a/app/views/teachers/subscribers.html.erb
+++ b/app/views/teachers/subscribers.html.erb
@@ -1,5 +1,6 @@
 <div class="headtitle">
       Subscribers
+      <a href="#" onClick="closefBox()" class="btn btn-mini pull-right">&times;</a>
 </div>
 <ul>
     <% @subscribers.each do |sub| %>
