--- a/app/views/teachers/show.html.erb
+++ b/app/views/teachers/show.html.erb
@@ -122,7 +122,7 @@
       <h3>
         <strong><%= @subscriptions.count %></strong>
         Subscriptions 
-        <button class="btn btn-mini pull-right" data-action="modal" data-url="<%= @teacher.username %>/subscriptions" type="button">View all</button>
+        <a class="view-all pull-right" data-action="modal" data-url="<%= @teacher.username %>/subscriptions">View all</a>
       </h3>
       <ul class="profile-avatars">
         <% @subscriptions.shuffle.sort_by{|t| Teacher.thumbready?(t) ? 1 : 0}[0..5].shuffle.each do |sub| %>
@@ -138,7 +138,7 @@
       <h3>
         <strong><%= @subscribers.count %></strong>
         Subscribers 
-        <button class="btn btn-mini pull-right" data-action="modal" data-url="<%= @teacher.username %>/subscribers" type="button">View all</button>
+        <a class="view-all pull-right" data-action="modal" data-url="<%= @teacher.username %>/subscribers">View all</a>
       </h3>
       <ul class="profile-avatars">
         <% @subscribers.shuffle.sort_by{|t| Teacher.thumbready?(t) ? 1 : 0}[0..5].shuffle.each do |sub| %>
